@@ -1252,6 +1252,8 @@ sub _PUT {
 		$status='423 Locked';
 	#} elsif (defined $ENV{HTTP_EXPECT} && $ENV{HTTP_EXPECT} =~ /100-continue/) {
 	#	$status='417 Expectation Failed';
+	} elsif ($backend->isDir($backend->getParent(($PATH_TRANSLATED))) && isInsufficientStorage()) {
+		$status='507 Insufficient Storage';
 	} elsif ($backend->isDir($backend->getParent(($PATH_TRANSLATED)))) {
 		if (! $backend->exists($PATH_TRANSLATED)) {
 			debug("_PUT: created...");
@@ -1424,6 +1426,8 @@ sub _MKCOL {
 	} elsif (!isAllowed($PATH_TRANSLATED)) {
 		debug("_MKCOL: not allowed!");
 		$status = '423 Locked';
+	} elsif ($backend->isDir($backend->getParent($PATH_TRANSLATED)) && isInsufficientStorage(1)) {
+		$status='507 Insufficient Storage';
 	} elsif ($backend->isDir($backend->getParent($PATH_TRANSLATED))) {
 		debug("_MKCOL: create $PATH_TRANSLATED");
 
@@ -1473,7 +1477,10 @@ sub _LOCK {
 			$type='text/plain';
 		}
 	} elsif (!$backend->exists($fn)) {
-		if ($backend->saveData($fn,'')) {
+		if (isInsufficientStorage(1)) {
+			$status='507 Insufficient Storage';
+			$type='text/plain';
+		} elsif ($backend->saveData($fn,'')) {
 			my $resp = getLockModule()->lockResource($fn, $ru, $xmldata, $depth, $timeout,$token);
 			if (defined $$resp{multistatus}) {
 				$status = '207 Multi-Status'; 
@@ -1881,6 +1888,8 @@ sub _REBIND {
 			$status = '403 Forbidden';
 		} elsif ($backend->exists($dst) && !$backend->isLink($ndst)) {
 			$status = '403 Forbidden';
+		} elsif (isInsufficientStorage(1)) {
+			$status = '507 Insufficient Storage';
 		} else {
 			$status = $backend->isLink($ndst) ? '204 No Content' : '201 Created';
 			$backend->unlinkFile($ndst) if $backend->isLink($ndst);
@@ -2659,4 +2668,17 @@ sub getErrorDocument {
 
 sub debug {
 	print STDERR "$0: @_\n" if $DEBUG;
+}
+sub isInsufficientStorage {
+	my ($mkcol) = @_;
+	my $ret=0;
+	if (defined $cgi->http('Content-Length')) {
+		my $filesize=$cgi->http('Content-Length');
+		my ($block_hard,$block_curr) = getQuota();
+		$ret = $block_hard >0 && $filesize+$block_curr > $block_hard;
+	} elsif (defined $mkcol) {
+		my ($block_hard,$block_curr) = getQuota();
+		$ret = $block_hard >0 && $block_curr >= $block_hard;
+	}
+	return $ret;
 }
